# chip8

./: CMakeLists.txt
src/: chip8.c  chip8.h  main.c
